feat: 뱃지 조회API 삭제 및 조회API 리팩토링